# mirage

./: .gitignore  CMakeLists.txt  README.md  STAGE_MANAGEMENT_PLAN.md  miracle.cc  miracle.config  miracle_config.cc  miracle_config.h  miracle_keybind.cc  miracle_keybind.h  miracle_window_manager.cpp  miracle_window_manager.h  mirage.cc  mirage_config.cc  mirage_config.h  mirage_keybind.cc  mirage_keybind.h  mirage_window_manager.cpp  mirage_window_manager.h  stage_manager.cc  stage_manager.h  window_manager.cc  window_manager.h
